Fixing alignment

--- a/client/src/css/ProductReviews.scss
+++ b/client/src/css/ProductReviews.scss
@@ -30,7 +30,7 @@
 }
 
 #reviews .wt-display-flex .stars {
-	margin: 19px 0 0 0;
+	margin: 32px 0 0 0;
 	display: flex;
 }
 
@@ -74,7 +74,7 @@
 	display:block !important;
 	content: '';
 	transform: scaleX(0);
-	bottom: -50% !important;
+	bottom: -65% !important;
 	left: 0%;
   width: 220px;
 	position: inherit;
